--- a/Projects/Broadway/resources/css/style.css
+++ b/Projects/Broadway/resources/css/style.css
@@ -9,6 +9,7 @@
   font-size: 18px;
   font-family: Helvetica;
   color: White;
+  font-weight: bold;
 }
 
 .image {
@@ -19,7 +20,9 @@
 
 .text {
   text-align: center;
+
 }
+
 
 .des {
   background-image: url(../images/the-flatiron-building.png);
@@ -36,7 +39,7 @@
   color: White;
 }
 
-h2 {
+h2  {
   font-family: Helvetica;
   font-size: 32px;
   font-weight: bold;
