--- a/Projects/Tea-Cozy/resources/css/style.css
+++ b/Projects/Tea-Cozy/resources/css/style.css
@@ -1,6 +1,10 @@
 body {
   background-color: black;
-  margin: 0;}
+  margin: 0;
+  font-family: Helvetica;
+  font-size: 22px;
+  color: Seashell;
+  opacity: 0.9;}
 
 header {
   height: 69px;
@@ -10,13 +14,10 @@ header {
   position: fixed;
   display: flex;
   align-items: center;
-  font-family: Helvetica;
-  font-size: 22px;
-  color: Seashell;
   z-index: 2;}
 
-a {
-  color: seashell;}
+  a {
+    color: seashell;}
 
 .header {
   flex-grow: 1;}
@@ -34,70 +35,50 @@ padding: 20px 10px;}
 .background {
   margin-top: 69px;
   width: 1200px;
-  height: 769px;
-
-}
+  height: 769px;}
 
 .opener {
   display: flex;
   justify-content: center;
-  align-items: center;
-}
+  align-items: center;}
 
 .openerinfo {
   position: absolute;
   background-color: black;
   width: 100%;
   top: 350px;
-  font-family: Helvetica;
-  font-size: 22px;
-  color: Seashell;
-  text-align: center;}
+  text-align: center;
+  padding-top: 0;}
+
 
 .tea-of-the-month {
   width: 1000px;
   height: 700px;
   margin: 0 auto;
   margin-top: 100px;
-  text-align: center;
-  font-family: Helvetica;
-  font-size: 22px;
-  color: Seashell;
-
-}
+  text-align: center;}
 
 .teas {
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
-}
+  flex-wrap: wrap;}
 
 .teas img {
   height: 200px;
   width: 300px;
   padding-bottom: 10px;
-  padding-right: 32px;
-
-}
+  padding-right: 32px;}
 
 .teas h4 {
   margin: 0;
-  padding-bottom: 10px;
-}
+  padding-bottom: 30px;}
 
-
-}
 
 h2 .tea-of-the-month {
-  text-align: center;
-  font-family: Helvetica;
-  font-size: 22px;
-  color: Seashell;
-}
+  text-align: center;}
 
 
 .locations {
-
   background-image: url(../images/location.jpg);
   background-position: center;
   height: 500px;
@@ -106,65 +87,47 @@ h2 .tea-of-the-month {
   margin: 0 auto;}
 
 .locations h2 {
-  font-family: Helvetica;
-  color: Seashell;
   text-align: center;
-  padding-top: 50px;
-}
-
+  padding-top: 50px;}
 
 
 .locationoptions {
   display: flex;
   height: 300px;
   margin-top: 15px;
-  justify-content: center;
-}
+  justify-content: center;}
 
 .leftoption {
   height: 300px;
   width: 300px;
   background-color: black;
   margin-right: 40px;
-  font-family: Helvetica;
-  font-size: 22px;
-  color: Seashell;
-  text-align: center;
-}
+  text-align: center;}
 
 .middleoption {
   height: 300px;
   width: 300px;
   background-color: black;
   margin-right: 40px;
-  font-family: Helvetica;
-  font-size: 22px;
-  color: Seashell;
-  text-align: center;
-
-}
+  text-align: center;}
 
 .rightoption {
   height: 300px;
   width: 300px;
   background-color: black;
   margin-right: 40px;
-  font-family: Helvetica;
-  font-size: 22px;
-  color: Seashell;
   text-align: center;
-}
+  opacity: 1;}
 
 .info {
-  font-family: Helvetica;
-  color: seashell;
   text-align: center;
   height: 200px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 footer {
   padding-left: 20px;
-  text-align: left;
-  font-family: Helvetica;
-  color: seashell;
-}
+margin-bottom: 30px;
+font-weight: bold;}
